fix biblio + glossairy

--- a/biblo.bib
+++ b/biblo.bib
@@ -661,8 +661,6 @@ url="https://drive.google.com/file/d/11O9U-dOV0R6z5rNibazUAKzFiaCoNwJa/view?usp=
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\PK59DV3T\\introduction.html}
 }
 
-
-
 @misc{JavaScriptCom,
   title = {{{JavaScript}}.Com},
   abstract = {JavaScript.com is a resource for the JavaScript community. You will find resources and examples for JavaScript beginners as well as support for JavaScript experts. Learn JavaScript or free with our easy to use input output machine.},
@@ -705,3 +703,18 @@ url="https://drive.google.com/file/d/11O9U-dOV0R6z5rNibazUAKzFiaCoNwJa/view?usp=
   doi = {10.15224/978-1-63248-044-6-118},
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\8CURCY42\\Hynek et Hruska - 2015 - Automatic evaluation of information dashboard usab.pdf}
 }
+
+@article{BootstrapFrontendFramework2022,
+  title = {Bootstrap (Front-End Framework)},
+  year = {2022},
+  month = jun,
+  journal = {Wikipedia},
+  abstract = {Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It contains HTML, CSS and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components. As of April 2022, Bootstrap is the eleventh most starred project on GitHub, with over 156,000 stars.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1091992243},
+  file = {C\:\\Users\\lenovo\\Zotero\\storage\\VIB7HHK2\\Bootstrap_(front-end_framework).html}
+}
+
+
+
