--- a/parts/abstract.tex
+++ b/parts/abstract.tex
@@ -2,9 +2,9 @@
     
     \begin{abstract}
         
-        The care of patients in a medical structure is provided by medical and paramedical staff. Coordination between staff involved in care requires efficient and synchronized communication. The presence of visual representations in this communication adds a dimension to the data which can improve the reading of these data, their interpretations, and thus accelerate the response time. 
+        The care of patients in a medical structure is provided by medical and paramedical staff. Coordination between staff involved in healthcare requires efficient and synchronized communication. The presence of visual representations in this communication adds a dimension to the data which can improve their reading, their interpretations, and thus accelerate the response time. 
         \bigbreak
-        In this project, four major points will be addressed: healthcare and data, information visualization  in this field, the different data management systems for multiple medical actors and the visualization system proposed to display personalized dashboards for different actors.
+        In this project, four major points will be addressed: healthcare and its data, information visualization  in this field, the different data management systems for multiple medical actors and the visualization system proposed to display personalized dashboards for different actors.
  \newline 
 
         \begin{keywordEN}
