--- a/parts/acknowledgements.tex
+++ b/parts/acknowledgements.tex
@@ -9,13 +9,13 @@
   
 \begin{acknowledgement}
 
-    I want to present all my gratitude to my supervisor Mr MEBARKI Abdelkarim who was always there to answer my questions, provide his insights, and to  guide me in the right direction when it was needed and for accepting to supervise and helping me. 
+    I want to present all my gratitude to my supervisor Mr MEBARKI Abdelkarim who was always there to answer my questions, provide his insights, and to  guide me in the right direction when it was needed and for accepting to supervise and help me. 
     
-    I present a special thanks to all the examiners Miss NAIT Bahloul and Miss MENAD Nadia for accepting to review and judge my thesis.
+    I present a special thanks to all the examiners Ms NAIT Bahloul and Ms MENAD Nadia for accepting to review and judge my thesis.
  
-    I would also like to take this opportunity to thank all the friends who have always been there for me: Oussama, Meriem, Houari, Soumia, Sirine, and to my colleagues from the UDev scientific club.
+    I would also like to take this opportunity to thank all the friends who have always been there for me: Oussama, Meriem, Houari, Soumia, Sirine, Soundous, and to my colleagues from the UDev scientific club.
  
-    Finally, I wish to express my very profound gratitude to my family and special thanks to my parents for providing me with unconditional support and continuous encouragement throughout my years of study. This accomplishment would not have been possible without you. Thank you!
+    Finally, I wish to express my very profound gratitude to my family and special thanks to my parents, my mom for providing me with unconditional support and continuous encouragement throughout my years of studying. This accomplishment would not have been possible without you. Thank you!
 
 
 
