--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -1,5 +1,5 @@
 \chapter{Health sector \& Data}
-\renewcommand{\thesection}{\arabic{section}}
+
 		
 
 
@@ -31,7 +31,7 @@ Healthcare is a multi-dimensional system established with the sole aim for the p
     \item \textbf{\textit{Tertiary care:}} advanced medical investigation and treatment.
     \item \textbf{\textit{Quaternary care:}} highly uncommon diagnostic or surgical procedures.
   \end{enumerate}
- At all these levels, the health professionals are responsible for different kind of information such as a patient's medical history (diagnosis and prescriptions related data), medical and clinical data (like data from imaging and laboratory examinations), and other private or personal medical data
+ At all these levels, the health professionals are responsible for different kind of information such as a patient's medical history (diagnosis and prescriptions related data), medical and clinical data (like data from imaging and laboratory examinations), and other private or personal medical data.
 
 
 Regardless of what form it takes, data has the potential to tell stories, identify cost savings and efficiencies, new connections and opportunities, and enable improved understanding of the past to shape a better future\cite{Zillner2016}.
@@ -51,7 +51,7 @@ Big data is a vague term with a definition that is not universally agreed upon. 
 If we trace the relationship between the use of the term big data per health research , we can easily infer the growth of medical informatics (Figure \ref{fig:bigDataHealthResearch}). Big data in health is concerned with meaningful datasets that are too big, too fast, and too complex for healthcare providers to process and interpret with existing tools\cite{andreu2015big}.
 \begin{figure}[h!]
     \center
-    \includegraphics[width=0.75\textwidth]{images/chapter1/health_publication_bigData.PNG}
+    \includegraphics[width=0.60\textwidth]{images/chapter1/health_publication_bigData.PNG}
     \caption{Cumulative number of publications per health research
     area referring to “big data,” as indexed in IEEE Xplore, ACM Digital library, PubMed (National Library of Medicine, Bethesda, MD), Web of Science, and Scopus.}
     \label{fig:bigDataHealthResearch}
@@ -96,7 +96,7 @@ Medical records are created by aggregating information from different sources: (
 
 
 \input{Tables/chapter1/source_data_medical.tex}
-\newpage
+
 \section{Medical records management}
 Self-tracking and documenting information about aspects of one’s personal and daily life has a long history. It is an effective method which helps us to learn more about ourselves, rather than depending on our limited memory\cite{alrehielyEvaluatingDifferentVisualization}.
 
@@ -124,7 +124,7 @@ The EMR can contain medical history, diagnoses, medications, immunizations and d
 The EHR contains similar details as the EMR, but also other relevant data like information from wearable devices, demographics, and insurance information. It can also contain lab data and imaging reports that come from other offices or practices. Assuming the software is compatible, other offices and practices can access the information within an EHR to help coordinate care and make clinical decisions\cite{KeyMaintainingMedical} (Table \ref{tab:EMRvsEHR}) gives an overview of this difference:
 \input{Tables/chapter1/emr_ehr_diff.tex}
 
-
+\newpage
 \subsection{Personal health record}
 Electronic Personal Health Records (ePHRs) are a representation of health records connected to the care of a patient and are managed by the patient\cite{demirisPatientcenteredApplicationsUse2008}, unlike EHRs, which are managed by health care providers. ePHRs allow healthcare consumers the luxury of deciding which health information to share with healthcare providers\cite{tangPersonalHealthRecords2006}. Ozok et al.\cite{PaperbasedComputerbasedRecords} defined ePHR systems as patient centric, multi-functional, health management systems developed for managing and storing lifelong personal health information for various purposes from chronic to critical, medical and preventive care\cite{alsahafiOverviewElectronicPersonal2018}.
 
@@ -135,7 +135,7 @@ The information in an EHR is keyed in by healthcare providers and is only access
   \caption{Difference between an EHR and ePHR (Taken from \cite{alsahafiOverviewElectronicPersonal2018}).}
   \label{fig:ehrvsphr}
 \end{figure}
-
+\newpage
 \section{Security in medical records management}
 The actual technology of an electronic medical record seems to be falling into place. As the world moves more toward the use of telemedicine to preclude the movement of patients to more advanced facilities, the need for a fully functioning medical record is paramount.
 One of the important ethical issues in electronic records management involves privacy. Privacy is the “claim of individuals to be left alone, free from surveillance or interference from other individuals, organizations, including state” (Laudon and Laudon 2005:159), privacy deals with the collection and use or misuse of data. Data is constantly being collected and stored on each of us. This data is often distributed over easily accessed networks and without our knowledge or consent\cite{ngoepeSecurityPrivacyEthics2011}.
@@ -154,11 +154,11 @@ Typical cross-organizational e-health applications are\cite{ruotsalainenCrosspla
 \item Patients’ access to their own EHRs.
 \end{itemize}
 
-\bigbreak
-That is why Electronic health records management attracts significant international interest and sets the scenery for the establishment of a distributed, coalition-based, security policy enhanced records exchange framework among different medical domains. Several European projects have proposed candidate solutions for secure inter-operations between medical domains. In the HARP project, security profiles related to access rights are dynamically downloaded to the client side. The MEDITRAV EUproject attempts to overcome national or linguistic barriers by adopting the solution of a multilingual portable personal record. These approaches, pose mainly their research effort on the security requirements for effective electronic health record management, still they confront mainly to stable infrastructures\cite{belsisPervasiveSecureElectronic2005}.
 
+That is why Electronic health records management attracts significant international interest and sets the scenery for the establishment of a distributed, coalition-based, security policy enhanced records exchange framework among different medical domains. Several European projects have proposed candidate solutions for secure inter-operations between medical domains. In the HARP project, security profiles related to access rights are dynamically downloaded to the client side. The MEDITRAV EUproject attempts to overcome national or linguistic barriers by adopting the solution of a multilingual portable personal record. These approaches, pose mainly their research effort on the security requirements for effective electronic health record management, still they confront mainly to stable infrastructures\cite{belsisPervasiveSecureElectronic2005}.
+\newpage
 \section{Conclusion}
-We have seen in this chapter the principal components of the healthcare sector from its principal actors through its activities to the data generated from each activity. Then we moved to the different medical electronic records management types, and we presented the differences between them. Finally, we moved on to the importance of the security field in the treatment of the patient data and medical data, then we did a quick overview of some of the projects implemented in this regard.
+We have seen in this chapter the principal components of the healthcare sector from its principal actors through its activities to the data generated from each activity. Then we moved to the different medical electronic records management types, and we presented the differences between them. Finally, we ended on to the importance of the security field in the treatment of the patient data and medical data, then we did a quick overview of some of the projects implemented in this regard.
 
 
 In the next chapter, we will present the Information visualization field and its applications.
